# polkadot_validator_selection

./: .gitignore  README.md  config.json  main.py  preprocessor.py  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
data_collection/: Makefile  README.md  get_data.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  signedphase_blocknumbers.json
data_collection/block_numbers/: block_numbers.json  block_numbers_dataframe.parquet  events.json  new_block_numbers_dataframe.parquet  phase_transitioned_events.json  solutionstored_blocknumbers.json
data_collection/signedphase_blocknumbers/: signedphase_blocknumbers.json
data_collection/src/: benchmark_simple_aggregation.py  get_data.py  get_snapshot.py  preprocessor.py  score_data.py  scrap_from_subscan.py  solver.py  solver_pulp.py  subscribe_events.py  utils.py
game_theory/: simplified_game.py
hackingtime/: 590_winners.json  Cargo.toml  README.md
hackingtime/src/: main.rs
models/: Makefile  config.json  config_ensemble.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
models/src/: adjustment.py  model.py  score.py  selector.py  utils.py
models/tests/: test_adjustment.py
models/trained_models/: lgbm.pkl  lgbm_scaler.pkl
mosek/10.0/tools/examples/c/: Makefile
mosek/10.0/tools/examples/dotnet/: Makefile
mosek/10.0/tools/examples/fusion/cxx/: Makefile
mosek/10.0/tools/examples/fusion/dotnet/: Makefile
mosek/10.0/tools/examples/fusion/java/: Makefile
mosek/10.0/tools/examples/java/: Makefile
mosek/10.0/tools/platform/linuxaarch64/h/: mosek.h
mosek/10.0/tools/platform/linuxaarch64/purepython/3/: setup.py
mosek/10.0/tools/platform/linuxaarch64/purepython/3/mosek/fusion/impl/: _implementation.py
mosek/10.0/tools/platform/linuxaarch64/python/3/: setup.py
mosek/10.0/tools/platform/linuxaarch64/src/fusion_cxx/: Makefile  fusion.cc
notebooks/: exploratory_analysis.ipynb  midterm_progress.ipynb  midterm_progress.slides.html  model_1.ipynb  model_2.ipynb  model_3.ipynb  seq_phragmen_example  signed_phase
sequential_phragmen/: sequential_phragmen.py  solver.py
sequential_phragmen_local/libs/: libsp_npos_elections.rlib
spark/: main.py
testvenv/: pyvenv.cfg
