[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_collection"
version = "0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.88.0", "uvicorn>=0.20.0", "pandas"]

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.47",
  "watchdog>=2.1.9",
  "httpx>=0.23.2",
]

[tool.ruff]
line-length = 79
ignore = ["E501"]
exclude = [".env", ".venv", "venv", "notebooks"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''